# CRYPTURITY

./: .dockerignore  .env.example  .gitignore  Data2.txt  README.md  docker-compose.yml  pyproject.toml  render.yaml  wallet_risk_dataset.json
app/: __init__.py  main.py
app/bases/: __init__.py  base_repository.py
app/components/: __init__.py
app/components/wallet_checker/: __init__.py
app/components/wallet_checker/routes/: __init__.py  wallet_routes.py
app/components/wallet_checker/services/: __init__.py  wallet_service.py
app/components/wallet_checker/usecases/: __init__.py  verify_wallet_usecase.py
app/components/wallet_checker/usecases/dto/: __init__.py  wallet_request_dto.py  wallet_response_dto.py
app/config/: logger.py  settings.py
app/controllers/: response_controller.py
app/middlewares/: logging.py
app/repositories/: wallet_repository.py
app/repositories/data/: __init__.py  wallet_risk_dataset.json
docker/: api.Dockerfile  frontend.Dockerfile
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/components/: EmptyState.vue  RiskIndicator.vue  WalletLookupForm.vue  WalletSummaryCard.vue
frontend/src/router/: index.ts
frontend/src/services/: apiClient.ts  walletService.ts
frontend/src/store/: walletStore.ts
frontend/src/styles/: theme.css
frontend/src/types/: api.ts  wallet.ts
frontend/src/views/: DashboardView.vue
scripts/: bootstrap.sh  generate_wallet_dataset.py  test_wallet_flow.py
